--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@babel/core": "^7.16.0",
     "@types/next": "^9.0.0",
     "cors": "^2.8.5",
-    "mongodb": "^3.7.3",
+    "deep-equal": "^2.0.5",
+    "mongodb": "^4.2.2",
+    "net": "^1.0.2",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
