--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "test": "ts-mocha --watch -p tsconfig.json **/*.spec.ts --require test/setup.ts",
+    "test-ci": "ts-mocha -p tsconfig.json **/*.spec.ts --require test/setup.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
