--- a/package.json
+++ b/package.json
@@ -1,39 +1,23 @@
 {
   "scripts": {
-    "test": "ts-mocha --watch -p tsconfig.json **/*.spec.ts --require test/setup.ts",
-    "test-ci": "ts-mocha -p tsconfig.json **/*.spec.ts --require test/setup.ts",
+    "test": "ts-mocha --watch -p tsconfig.json **/*.spec.ts",
+    "test-ci": "ts-mocha -p tsconfig.json **/*.spec.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@types/next": "^9.0.0",
     "cors": "^2.8.5",
     "deep-equal": "^2.0.5",
     "mongodb": "^4.2.2",
-    "net": "^1.0.2",
     "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
-    "@types/expect": "^24.3.0",
-    "@types/mocha": "^9.0.0",
-    "@types/react": "^17.0.37",
-    "bluebird": "^3.7.2",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
-    "esm": "^3.2.25",
     "mocha": "^9.1.3",
-    "next-test-api-route-handler": "^2.3.4",
-    "proxyquire": "^2.1.3",
-    "sinon": "^12.0.1",
-    "sinon-chai": "^3.7.0",
     "supertest": "^6.1.6",
     "ts-mocha": "^8.0.0",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
 }
