--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.development
+.env.test
+.env.production
