--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "scripts": {
-    "test": "ts-mocha --watch -p tsconfig.json **/*.spec.ts",
+    "test": "ts-mocha --watch --watch-extensions ts -p tsconfig.json **/*.spec.ts",
     "test-ci": "ts-mocha -p tsconfig.json **/*.spec.ts",
-    "dev": "next dev",
+    "dev": "dotenv -e .env.development next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "migrate:dev": "dotenv -e .env.development -- npx prisma migrate dev --name init",
+    "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev --name init"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.0",
+    "@types/react": "^17.0.38",
     "cors": "^2.8.5",
     "deep-equal": "^2.0.5",
-    "mongodb": "^4.2.2",
+    "dotenv-cli": "^4.1.1",
     "next": "^12.0.7",
-    "react": "^17.0.2"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.1",
+    "@types/node": "^17.0.14",
+    "dotenv": "^15.0.0",
     "mocha": "^9.1.3",
+    "prisma": "^3.9.0",
     "supertest": "^6.1.6",
     "ts-mocha": "^8.0.0",
     "typescript": "^4.5.4"
