--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       bash -c '
         echo "Running tests..."
         npm install
-        npm run migrate:test
+        npm run migrate
         if [ "${IS_CI}" = "" ]
         then
           npm test
