--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "test": "ts-mocha --watch --watch-extensions ts -p tsconfig.json **/*.spec.ts",
-    "test-ci": "ts-mocha -p tsconfig.json **/*.spec.ts",
+    "test": "nodemon --exec \"npm run test-ci\" --ext .ts --ignore node_modules",
+    "test-ci": "ts-mocha -p tsconfig.json test/**/*.spec.ts",
     "migrate": "dotenv -- npx prisma migrate dev --name init"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "@types/node": "^17.0.14",
     "dotenv": "^15.0.0",
     "mocha": "^9.1.3",
+    "nodemon": "^2.0.15",
     "prisma": "^3.9.0",
     "supertest": "^6.1.6",
     "ts-mocha": "^8.0.0",
